--- a/index.html
+++ b/index.html
@@ -2,20 +2,12 @@
 <html>
 <head>
     <link href="styles.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Technical Documentation Page</title>
 </head>
 <body>
     <main id="main-doc">
-        <nav id="nav-bar">
-            <h1>Topic of Technical Documentation</h1>
-            <a class="nav-link" href="#First_Section">First Section</a>
-            <a class="nav-link" href="#Second_Section">Second Section</a>
-            <a class="nav-link" href="#Third_Section">Third Section</a>
-            <a class="nav-link" href="#Fourth_Section">Fourth Section</a>
-            <a class="nav-link" href="#Fifth_Section">Fifth Section</a>
-        </nav>
         <section class="main-section" id="First_Section">
-            <h2>First Section</h2>
+            <header>First Section</header>
             <p>Okay sooo, this is the first paragraph</p>
             <p>Second here</p>
             <p>Third</p>
@@ -23,7 +15,7 @@
             <code>Code again ugh</code>
         </section>
         <section class="main-section" id="Second_Section">
-            <h2>Second Section</h2>
+            <header>Second Section</header>
             <p>We have fourth here</p>
             <p>Yeah this is the fifth</p>
             <ul>
@@ -33,7 +25,7 @@
             </ul>
         </section>
         <section class="main-section" id="Third_Section">
-            <h2>Third Section</h2>
+            <header>Third Section</header>
             <p>Sixth</p>
             <p>Seventhhhhhh</p>
             <code>10101010101010</code>
@@ -43,16 +35,24 @@
             </ul>
         </section>
         <section class="main-section" id="Fourth_Section">
-            <h2>Fourth Section</h2>
+            <header>Fourth Section</header>
             <p>Number Eight</p>
             <code>cout << &apos;Um&apos;</code>
         </section>
         <section class="main-section" id="Fifth_Section">
-            <h2>Fifth Section</h2>
+            <header>Fifth Section</header>
             <p>Ninerr</p>
             <p>Ben Ten</p>
             <code>Yeah I did C&plus;&plus;</code>
         </section>
+        <nav id="nav-bar">
+            <header>Topic of Technical Documentation</header>
+            <a class="nav-link" href="#First_Section">First Section</a>
+            <a class="nav-link" href="#Second_Section">Second Section</a>
+            <a class="nav-link" href="#Third_Section">Third Section</a>
+            <a class="nav-link" href="#Fourth_Section">Fourth Section</a>
+            <a class="nav-link" href="#Fifth_Section">Fifth Section</a>
+        </nav>
     </main>
 </body>
 </html>
