Change id of nav

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>Ben Ten</p>
             <code>Yeah I did C&plus;&plus;</code>
         </section>
-        <nav id="nav-bar">
+        <nav id="navbar">
             <header>Topic of Technical Documentation</header>
             <a class="nav-link" href="#First_Section">First Section</a>
             <a class="nav-link" href="#Second_Section">Second Section</a>
